set code font-size to be smaller to avoid its overflow in mobile device

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,10 @@ li {
 }
 
 @media (max-width: 993px) {
+  pre {
+    font-size: 0.7rem;
+  }
+
   div.hide-in-mobile {
     display: none;
   }
